RESOLVED FIXED123676
Fix compilation of SynchronousLoaderClient
https://bugs.webkit.org/show_bug.cgi?id=123676
Summary Fix compilation of SynchronousLoaderClient
Patrick R. Gansterer
Reported 2013-11-02 11:05:14 PDT
Fix compilation of SynchronousLoaderClient
Attachments
Patch (1.61 KB, patch)
2013-11-02 11:08 PDT, Patrick R. Gansterer
no flags
Patrick R. Gansterer
Comment 1 2013-11-02 11:08:38 PDT
WebKit Commit Bot
Comment 2 2013-11-02 15:15:12 PDT
Comment on attachment 215819 [details] Patch Clearing flags on attachment: 215819 Committed r158504: <http://trac.webkit.org/changeset/158504>
WebKit Commit Bot
Comment 3 2013-11-02 15:15:14 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.