Fix compilation of SynchronousLoaderClient https://bugs.webkit.org/show_bug.cgi?id=123676

Reviewed by Darin Adler.

Assign a ResourceRequest varibale an empty ResourceRequest instead of 0.
The current solution only works for ports which can create a
ResourceRequest from a pointer, which might not be true for all ports.

* platform/network/SynchronousLoaderClient.cpp:
(WebCore::SynchronousLoaderClient::willSendRequest):


Canonical link: https://commits.webkit.org/141857@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158504 268f45cc-cd09-0410-ab3c-d52691b4dbfc